# D-coA

./: .gitignore  CMakeLists.txt  README.md  streaming.sh
hw/: README.md  runtb.sh
hw/src/: PUFCore.bsv  TimeStampGenerator.bsv  Types.bsv
hw/tb/: TbPUFCore.bsv  TbTimeStampGenerator.bsv  TbTimestamp.bsv
include/: shared_memory.h
scripts/: camera_capture.py
src/: shared_memory.cpp
sw/: README.md  main.py  requirements.txt
sw/ai_model/: README.md  __init__.py  deepfake.py  inference.py  liveness.py  object_detection.py
sw/ai_model/tests/: __init__.py  sjw_test_liveness.py  test_inference.py
sw/block_chain/: block.py  chain.py  server.py
sw/capture/: README.md  __init__.py  camera_source.py  frame_capture.py  frame_streamer.py  preprocessor.py
sw/capture/tests/: __init__.py  sy_test_code.py  test_capture.py
sw/capture/tests_video_preprocessor/: sy_test_code.py  test_video_suin.py
sw/common/: __init__.py  config.py  frame_buffer.py  logger.py
test/: camera_test.cpp
